<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/location_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_location" />

    <TextView
        android:id="@+id/location_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/location"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/location_image_view"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detail_address_line1_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/address"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/location_image_view"
            app:layout_constraintTop_toBottomOf="@+id/location_text_view" />

        <TextView
            android:id="@+id/detail_line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/line2"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/location_image_view"
            app:layout_constraintTop_toBottomOf="@+id/detail_address_line1_num" />

        <TextView
            android:id="@+id/detail_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/city"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/location_image_view"
            app:layout_constraintTop_toBottomOf="@+id/detail_line2" />

        <TextView
            android:id="@+id/detail_zip_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/zip_code"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/location_image_view"
            app:layout_constraintTop_toBottomOf="@+id/detail_city" />

        <TextView
            android:id="@+id/detail_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/country"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/location_image_view"
            app:layout_constraintTop_toBottomOf="@+id/detail_zip_code" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>
