<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/real_estate_item_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_background">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle">

        <ImageView
            android:id="@+id/item_picture"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@android:drawable/ic_menu_gallery" />

        <ImageView
            android:id="@+id/item_banner"
            android:layout_width="100dp"
            android:layout_height="72dp"
            android:foreground="@drawable/sold_banner"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/item_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/item_picture"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:text="@string/item_location"
            app:layout_constraintBottom_toTopOf="@+id/item_price"
            app:layout_constraintStart_toEndOf="@+id/item_picture"
            app:layout_constraintTop_toBottomOf="@+id/item_name" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/item_price"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_picture"
            app:layout_constraintTop_toBottomOf="@+id/item_location" />
    </android.support.constraint.ConstraintLayout>

</RelativeLayout>
